deploy/overlays/dev/chroma-logdir-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chroma
spec:
  template:
    spec:
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: chroma
          volumeMounts:
            - name: chroma-logs
              mountPath: /chroma
      volumes:
        - name: chroma-logs
          emptyDir: {}
