deploy/overlays/dev/chroma-overlay-pkg.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chroma
spec:
  template:
    spec:
      containers:
        - name: chroma
          volumeMounts:
            - name: chroma-pkg
              mountPath: /opt/overlay
      volumes:
        - name: chroma-pkg
          emptyDir: {}
        - name: chroma-log-config
          configMap:
            name: chroma-log-config
