deploy/overlays/dev/chroma-simple-command.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chroma
spec:
  template:
    spec:
      containers:
        - name: chroma
          command: ["chroma"]
          args: ["run","--host","0.0.0.0","--port","8000"]
