deploy/overlays/dev/oauth2-proxy-scale-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 0
