deploy/overlays/dev/remove-nginx-proxy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chroma
spec:
  template:
    spec:
      containers:
        - name: nginx-proxy
          $patch: delete
