deploy/overlays/dev/resources-dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chroma
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: chroma
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
