deploy/overlays/dev/service-chroma-merge.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma-svc
spec:
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
