deploy/overlays/dev/route-host-patch.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chroma
spec:
  host: chroma-dev.apps-crc.testing
